umol-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@zinc_ZINC000003812983.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C17NO3
      atom_count: 21
      bond_count: 25
      property_count: 2
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C17NO3
      atom_count: 21
      bond_count: 25
      property_count: 2
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C17NO3
      atom_count: 21
      bond_count: 25
      extended_atoms: 0
      extended_bonds: 0
      property_count: 2
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C17NO3
      atom_count: 21
      bond_count: 25
      extended_atoms: 0
      extended_bonds: 0
      property_count: 2
      rgroup_count: 0
      sgroup_count: 0
